--- a/Lab5/lab5.qsf
+++ b/Lab5/lab5.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
-set_global_assignment -name TOP_LEVEL_ENTITY lab5
+set_global_assignment -name TOP_LEVEL_ENTITY slc3_testtop
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:38:21  FEBRUARY 22, 2023"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -57,9 +57,7 @@ set_global_assignment -name EDA_TEST_BENCH_NAME testbench.sv -section_id eda_sim
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testbench.sv
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testbench -section_id testbench.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE testbench.sv -section_id testbench.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE HexDriver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE TwoInputMux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ThreeInputMux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE testbench.sv
@@ -77,4 +75,10 @@ set_global_assignment -name SYSTEMVERILOG_FILE memory_contents.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Mem2IO.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ISDU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Instantiateram.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_P11 -to Clk
+set_location_assignment PIN_B8 -to Continue
+set_location_assignment PIN_A7 -to HEX0[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
