--- a/Lab5/lab5.qsf
+++ b/Lab5/lab5.qsf
@@ -111,7 +111,7 @@ set_location_assignment PIN_C10 -to SW[0]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE FourInputMux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_MOD.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Reg_File.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Ben.sv
@@ -135,3 +135,4 @@ set_global_assignment -name SYSTEMVERILOG_FILE ISDU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Instantiateram.sv
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name SOURCE_FILE db/lab5.cmp.rdb
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
