--- a/Lab5/lab5.qsf
+++ b/Lab5/lab5.qsf
@@ -56,7 +56,6 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH testbench.sv -s
 set_global_assignment -name EDA_TEST_BENCH_NAME testbench.sv -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testbench.sv
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testbench -section_id testbench.sv
-set_global_assignment -name EDA_TEST_BENCH_FILE testbench.sv -section_id testbench.sv
 set_location_assignment PIN_P11 -to Clk
 set_location_assignment PIN_B8 -to Continue
 set_location_assignment PIN_C17 -to HEX0[6]
@@ -135,4 +134,10 @@ set_global_assignment -name SYSTEMVERILOG_FILE ISDU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Instantiateram.sv
 set_global_assignment -name QIP_FILE ram.qip
 set_global_assignment -name SOURCE_FILE db/lab5.cmp.rdb
+set_global_assignment -name EDA_TEST_BENCH_FILE testbench.sv -section_id testbench.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME testbench -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id testbench
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "3000 ns" -section_id testbench
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME testbench.sv -section_id testbench
+set_global_assignment -name EDA_TEST_BENCH_FILE testbench.sv -section_id testbench
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
